--- a/app/src/main/res/layout/activity_show_contact_data.xml
+++ b/app/src/main/res/layout/activity_show_contact_data.xml
@@ -3,35 +3,39 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/swipe_refresh_layout"
+    android:background="@color/white_grey"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".dashboard.home.HomeFragment">
+    tools:context=".dashboard.profile.contact.showcontactdata.ShowContactDataActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <include
-            android:id="@+id/layout_average"
-            layout="@layout/layout_average"
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="24dp"
-            android:visibility="gone"
+            android:layout_height="?actionBarSize"
+            style="@style/TextRegular"
+            app:title="@string/show_contact_data_title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <include
-            android:id="@+id/layout_loading"
-            layout="@layout/layout_loading"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:visibility="gone" />
+            android:id="@+id/layout_average"
+            layout="@layout/layout_average"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
         <include
-            android:id="@+id/layout_emergency_button"
-            layout="@layout/layout_emergency_button"
+            android:id="@+id/layout_loading"
+            layout="@layout/layout_loading"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:visibility="gone" />
