--- a/app/src/main/res/layout/item_contact_list.xml
+++ b/app/src/main/res/layout/item_contact_list.xml
@@ -57,9 +57,11 @@
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/btn_delete_contact"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:minWidth="50dp"
+            android:layout_height="0dp"
             android:layout_marginEnd="8dp"
             android:backgroundTint="@android:color/transparent"
+            android:padding="8dp"
             android:src="@drawable/ic_delete"
             android:tint="@color/red"
             app:layout_constraintBottom_toBottomOf="parent"
