--- a/app/src/main/res/layout/item_pending_contact_list.xml
+++ b/app/src/main/res/layout/item_pending_contact_list.xml
@@ -36,7 +36,7 @@
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/btn_delete_contact"
+            app:layout_constraintEnd_toStartOf="@+id/btn_add_contact"
             app:layout_constraintStart_toEndOf="@+id/iv_profile"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -50,9 +50,26 @@
             android:layout_marginBottom="8dp"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/btn_delete_contact"
+            app:layout_constraintEnd_toStartOf="@+id/btn_add_contact"
             app:layout_constraintStart_toEndOf="@+id/iv_profile"
             app:layout_constraintTop_toBottomOf="@+id/tv_name" />
+
+        <ImageButton
+            android:id="@+id/btn_add_contact"
+            style="@style/TextMedium"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/circle_button"
+            android:backgroundTint="@color/primary_color"
+            android:padding="8dp"
+            android:src="@drawable/ic_add"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/btn_delete_contact"
+            app:layout_constraintTop_toTopOf="parent"
+            app:tint="@color/light_grey" />
 
         <ImageButton
             android:id="@+id/btn_delete_contact"
@@ -62,8 +79,8 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:padding="8dp"
             android:background="@drawable/circle_button"
+            android:padding="8dp"
             android:src="@drawable/ic_delete"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
